# httpie

./: .gitignore  Cargo.toml
src/: main.rs
