[package]
name = "httpie"
version = "0.1.0"
authors = ["Aaron <qzh6662@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = "3.0.0-beta.4" # 命令行解析
colored = "2" # 命令行终端多彩显示
jsonxf = "1.1" # JSON pretty print
mime = "0.3" # 处理mime类型
syntect = "4.6" # 语法高亮
reqwest = { version = "0.11", features = ["json"] } # HTTP 客户端
tokio = { version = "1", features = ["full"] } # 异步处理库